# fileformats

./: .buildinfo  .codespell-ignorewords  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS  CONTRIBUTING.md  README.md  README.rst  api.html  codecov.yml  conftest.py  converters.html  detection.html  developer.html  extensions.html  extras.html  file_handling.html  genindex.html  identification.html  index.html  mime.html  objects.inv  pyproject.toml  pytest.ini  quick_start.html  read_write.html  search.html  searchindex.js  setup.cfg  typing.html  workflows.html
.github/workflows/: ci-cd.yml  docs.yml  publish.yml  tests.yml
_modules/: index.html
_modules/fileformats/: audio.html  field.html  model.html  text.html  video.html
_modules/fileformats/application/: archive.html  document.html  medical.html  misc.html  serialization.html
_modules/fileformats/core/: classifier.html  datatype.html  field.html  fileset.html  identification.html  mixin.html
_modules/fileformats/generic/: directory.html  file.html  fsobject.html  set.html
_modules/fileformats/image/: notclassifiedyet.html  raster.html  vector.html
_modules/fileformats/text/: ascii.html  base.html  unicode.html
_sources/: converters.rst.txt  developer.rst.txt  extensions.rst.txt  identification.rst.txt  index.rst.txt  read_write.rst.txt  typing.rst.txt  workflows.rst.txt
_sources/developer/: extensions.rst.txt
_sources/reference/: datascience.rst.txt  field.rst.txt  image.rst.txt  medimage.rst.txt  text.rst.txt  video.rst.txt
_static/: documentation_options.js
developer/: extensions.html  extras.html
docs/logo_dev/: snake-transparent.psd  snake-trimmed-mod.psd  snake-trimmed.psd
docs/source/: api.rst  classifiers.rst  conf.py  converters.rst  detection.rst  developer.rst  extensions.rst  extras.rst  fields.rst  file_handling.rst  identification.rst  index.rst  installation.rst  mime.rst  quick_start.rst  typing.rst  validation.rst  workflows.rst
docs/source/developer/: extensions.rst  extras.rst
docs/source/reference/: application.rst  audio.rst  core.rst  generic.rst  model.rst
extras/: LICENSE  README.rst  pyproject.toml
extras/fileformats/extras/application/: __init__.py  archive.py  medical.py  serialization.py
extras/fileformats/extras/application/tests/: test_application_archive.py  test_application_medical.py  test_application_serialization.py
extras/fileformats/extras/core/: __init__.py
extras/fileformats/extras/core/tests/: test_converter.py  test_import_check.py
extras/fileformats/extras/generic/: __init__.py  converters.py
extras/fileformats/extras/generic/tests/: test_converters.py
extras/fileformats/extras/image/: __init__.py  converters.py  readwrite.py
extras/fileformats/extras/image/tests/: test_image_converters.py
extras/fileformats/extras/testing/: __init__.py
extras/fileformats/extras/text/: __init__.py  load_save.py
fileformats/: archive.py  audio.py  document.py  generic.py  model.py  serialization.py  text.py  video.py
fileformats-archive/: pyproject.toml
fileformats-core/: pyproject.toml
fileformats-core/fileformats/core/: base.py  converter.py  mark.py
fileformats-document/: pyproject.toml
fileformats-image/: pyproject.toml
fileformats-image/fileformats/image/: __init__.py
fileformats-numeric/: pyproject.toml
fileformats-text/: pyproject.toml
fileformats/application/: __init__.py  archive.py  document.py  medical.py  misc.py  presentation.py  pyproject.toml  serialization.py  spreadsheet.py
fileformats/application/converters/: archive.py
fileformats/application/document/: __init__.py
fileformats/application/serialization/: __init__.py
fileformats/application/tests/: test_import.py
fileformats/archive/: __init__.py  converters.py  pyproject.toml
fileformats/archive/tests/: test_archive_converters.py
fileformats/audio/: __init__.py
fileformats/core/: __init__.py  base.py  classifier.py  collection.py  converter.py  converter_helpers.py  datatype.py  decorators.py  directory.py  exceptions.py  extras.py  field.py  file.py  fileset.py  fs_mount_identifier.py  fs_mounts.py  generic.py  hook.py  identification.py  io.py  mark.py  mixin.py  mock.py  pyproject.toml  quality.py  sampling.py  type_aliases.py  typing.py  utils.py
fileformats/core/tests/: test_classifiers.py  test_converter.py  test_decorators.py  test_definitions.py  test_detection.py  test_extras.py  test_fs_mount_identifier.py  test_fs_mounts.py  test_general.py  test_hooks.py  test_identification.py  test_io.py  test_metadata.py  test_mime.py  test_mixin.py  (+4 more)
fileformats/document/: __init__.py  pyproject.toml
fileformats/field/: __init__.py
fileformats/fields/: __init__.py
fileformats/generic/: __init__.py  directory.py  file.py  fsobject.py  generate_sample_data.py  set.py
fileformats/image/: __init__.py  base.py  converters.py  image.py  notclassifiedyet.py  pyproject.toml  raster.py  vector.py
fileformats/misc/: __init__.py  medical.py  unclassified.py
fileformats/model/: __init__.py
fileformats/numeric/: __init__.py  numeric.py  pyproject.toml
fileformats/serialization/: __init__.py  converters.py
fileformats/testing/: __init__.py  abstract.py  basic.py  converters.py  headers.py  magic.py  with_extras.py
fileformats/testing_subpackage/: __init__.py
fileformats/text/: __init__.py  ascii.py  base.py  converters.py  pyproject.toml  text.py  unicode.py
fileformats/video/: __init__.py
reference/: application.html  audio.html  core.html  datascience.html  field.html  generic.html  image.html  medimage.html  model.html  text.html  video.html
scripts/: addin_descriptions.py  gen_classes.py  gen_manual_edit_spec.py  iana_scraper.py  import_all.py  mime-types-editable.yaml  not-covered.txt  subtype_parser.py
src/fileformats-archive/: pyproject.toml
src/fileformats-core/: pyproject.toml
src/fileformats-document/: pyproject.toml
src/fileformats-image/: pyproject.toml
src/fileformats-numeric/: pyproject.toml
src/fileformats-text/: pyproject.toml
tests/core/: test_converter.py  test_mixin.py
(+25 files in other folders)
