[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fileformats"
description = "Classes for representing different file formats in Python classes for use in type hinting in data workflows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typing_extensions >=4.6.3; python_version < '3.11'"]
license = { file = "LICENSE" }
authors = [{ name = "Thomas G. Close", email = "tom.g.close@gmail.com" }]
maintainers = [{ name = "Thomas G. Close", email = "tom.g.close@gmail.com" }]
keywords = [
    "file-formats",
    "data",
    "filetype",
    "magic numbers",
    "file extension",
    "MIME",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
    "fileformats[test]",
    "mypy >=1.5.1",
    "pydata-sphinx-theme >=0.13",
    "pydicom",                    # for typing
]
test = [
    "mypy >=1.5.1",
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
    "pydra >=1.0a",
    "fileformats-extras",
]
docs = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]

[project.urls]
repository = "https://github.com/ArcanaFramework/fileformats"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fileformats/core/_version.py"

[tool.hatch.metadata]
allow-direct-references = false

[tool.hatch.build]
packages = ["fileformats"]
exclude = ["tests"]
include = ["./fileformats"]

[tool.black]
target-version = ['py38']
exclude = "fileformats/core/_version.py"


[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "tests",
    "scripts",
    "docs",
    "build",
    "dist",
    "fileformats/core/_version.py",
]


[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']
