[metadata]
name = fileformats
version = 0.1
description = A collection of Python classes representing different file formats, for use in the validation of data workflows.
authors = Thomas G. Close (tom.g.close@gmail.com)
license = CC BY-NC-SA 4.0

[options]
install_requires =
    fileformats-archive
    fileformats-core
    fileformats-document
    fileformats-image
    fileformats-numeric
    fileformats-text
